Fix main page accordion colors for dark mode

--- a/app/static/css/base/colors.css
+++ b/app/static/css/base/colors.css
@@ -24,7 +24,7 @@ html[data-theme="dark"] {
     --fg-color-2: rgb(201, 201, 201);
     --bg-color-1: var(--dark);
     --bg-color-2: rgb(74, 74, 74);
-    --title-color: rgb(16, 139, 129);
+    --title-color: rgb(20, 173, 161);
     --primary-color: hsl(41, 90.6%, 41.8%);
     --primary-color-accent: hsl(41, 90.6%, 31.8%);
     --secondary-color: hsl(258, 100%, 65%);
@@ -42,6 +42,14 @@ header {
 
 body {
     background-color: var(--bg-color-1);
+    color: var(--fg-color-1);
+}
+
+thead tr,td {
+    background-color: var(--bg-color-1) !important;
+}
+
+td {
     color: var(--fg-color-1);
 }
 
